Added the api response

--- a/facerecognitionwebapp/src/Components/ImageLinkForm/ImageLinkForm.css
+++ b/facerecognitionwebapp/src/Components/ImageLinkForm/ImageLinkForm.css
@@ -2,9 +2,10 @@
     width: 40vw;
     margin: 0 auto;
     padding: 3vh 0 4vh 0;
-    background: rgba(155, 155, 155, 0.5);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(20px);
+    background: rgba(219, 100, 255, 0.2);
+    backdrop-filter: blur(2px);
+    border-radius: 5px;
+    
 }
 .detect{
     background: rgb(167, 136, 196);
