added signing and register pages with route

--- a/facerecognitionwebapp/src/App.css
+++ b/facerecognitionwebapp/src/App.css
@@ -1,6 +1,15 @@
-.App {
+#home-page {
   text-align: center;
 }
+
+#signin-page {
+  text-align: center;
+}
+
+#register-page {
+  text-align: center;
+}
+
 
 .logoComp{
   position: absolute;
