--- a/facerecognitionwebapp/src/Components/ImageLinkForm/ImageLinkForm.css
+++ b/facerecognitionwebapp/src/Components/ImageLinkForm/ImageLinkForm.css
@@ -1,20 +1,38 @@
 .container{
-    width: 40vw;
+    width: 600px;
     margin: 0 auto;
     padding: 3vh 0 4vh 0;
-    background: rgba(219, 100, 255, 0.2);
+    background: rgba(36, 36, 36, 0.2);
     backdrop-filter: blur(2px);
     border-radius: 5px;
     
 }
+
+
 .detect{
     background: rgb(167, 136, 196);
     border: none;
-    width: 8vw;
+    width: 100px;
     height: 3.5vh;
 }
 
 .linkInput{
-    width: 20vw;
+    width: 300px;
     height: 3vh;
+}
+
+@media only screen and (max-width: 600px) {
+    .container{
+        width: 90vw;
+        margin: 0 auto;
+        padding: 3vh 0 4vh 0;
+    }
+    .linkInput{
+        width: 50vw;
+        height: 3vh;
+    }
+    .detect{
+        width: 20vw;
+        height: 3.5vh;
+    }
 }
